Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-01-19 (SVN):
    * hexenworld cl_main.c: Changed default rate value form 2500 to 5760
      i.e. 72 fps.

2012-01-19 (SVN):
    * hexenworld screen.c, gl_screen.c (SCR_UpdateScreen): SCR_DrawFPS()
      must be called after Sbar_Draw() so that it is actually visible on
      the screen.

2012-01-19 (SVN):
    * cd_win.c, gl_vidnt.c, vid_mgl4.c, vid_win.c: The window procedure
      must return not LONG but LRESULT which really is a LONG for win32
      but a LONG_PTR for win64.
    * gl_vidnt.c, vid_mgl4.c, vid_win.c: simplified the MSWHEEL_ROLLMSG
      code a bit.
    * updated beta date stamp to 2012-01-19.

2012-01-15 (SVN):
    * h2/axe.hc (axetail_run): if no owner, remove self and return (just
      in case. merged from the mission pack.)
    * portals/allplay.hc (PlayerSpeed_Calc): removed duplicated assignment
      to self.hasted for CLASS_ASSASSIN and CLASS_SUCCUBUS cases.
    * h2/doors.hc (door_sounds): removed duplicated precache_sound() call
      for misc/null.wav
    * MG_AI.hc: Sanitized whitespace style. In the mission pack version,
      changed CheckJump() call to take no arguments and commented out the
      dprints, just like in h2: the function already used to set its own
      print_err parameter to false so it only used to lead to bloating.
      Adjusted all callers of CheckJump().

2012-01-14 (SVN):
    * h2/weapons.hc: Fixed occasional crashes in the original hexen2 game
      with the Paladin's axe.
    * Bumped the gamecode version number to 1.25.

2012-01-09 (SVN):
    * in_win.c: Added new IN_DiscardMove() helper which nukes the winmouse
      data collected by IN_Accumulate() by zeroing the mx_accum, my_accum,
      old_mouse_x and old_mouse_y. Direct input mode seems friendly with
      cameramode already. Called the new helper from IN_Move() when we are
      in cameramode in order to discard mouse motion.

2012-01-09 (SVN):